Larger font for the content and some spacing fixes

--- a/content/.vuepress/theme/styles/code.scss
+++ b/content/.vuepress/theme/styles/code.scss
@@ -28,6 +28,7 @@
 
   div[class*="language-"] {
     position: relative;
+    margin-bottom: 50px;
     background-color: $codeBgColor;
     border-radius: 6px;
 
