--- a/content/.vuepress/theme/styles/content.scss
+++ b/content/.vuepress/theme/styles/content.scss
@@ -4,6 +4,8 @@
 
 .content-body {
   text-align: justify;
+  font-size: 1.2rem;
+  line-height: 1.8;
 
   h1, h2, h3, h4, h5, h6 {
     position: relative;
